tests/sksl/errors/golden/StaticSwitchConditionalBreak.glsl
### Compilation failed:

Updated & out!
CFG scan!
Updated & out!
CFG scan!
error: 3: static switch contains non-static conditional break
1 error
